--- a/src/client/game/powerups.css
+++ b/src/client/game/powerups.css
@@ -127,9 +127,11 @@
 
 .projectile-knife {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    font-size: 30px;
+    width: 70px;
+    /* Increased from 40px */
+    height: 70px;
+    font-size: 50px;
+    /* Increased from 30px */
     display: flex;
     justify-content: center;
     align-items: center;
